--- a/public/styles.css
+++ b/public/styles.css
@@ -9,3 +9,10 @@
     align-items:center;
     justify-content:center;
 }
+body{
+    background:silver;
+}
+#to,label:nth-child(1){
+    opacity:0;
+    transform:scale(0);
+}
