--- a/public/styles.css
+++ b/public/styles.css
@@ -11,8 +11,13 @@
 }
 body{
     background:silver;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
+    height:100vh;
 }
-#to,label:nth-child(1){
+/* #to,label:nth-child(1){
     opacity:0;
     transform:scale(0);
-}
+} */
