--- a/public/styles.css
+++ b/public/styles.css
@@ -16,12 +16,20 @@
     border-radius:12px;
     height:50vh;
 }
+#email-title{
+    font-family: "Jersey 10", sans-serif;
+    font-size:35px;
+    letter-spacing:1.15px;
+}
+
 #form{
     width:100%;
+    height:100%;
     display:flex;
     flex-direction:column;
     align-items:center;
 }
+
 #wrapper:hover{
     border-bottom: 1rem outset red;
     border-top: 1rem outset rgb(148, 69, 69);
@@ -124,4 +132,35 @@ border:2px solid #333;
 /* #form>label,#form>.inp{
 
 } */
+textarea{
+    width:100%;
+    height:50%;
+    border:4px solid red;
+    resize:none;
+}
 
+.form-button-container{
+    display:flex;
+    align-items:center;
+    justify-content:space-evenly;
+    margin:1rem 0;
+    gap:.5rem;
+}
+
+.btn-inp,
+.btn-inp:nth-child(1)::-webkit-file-upload-button{
+    padding:.5rem 1rem;
+    border-radius:12px; 
+    border:none;
+    transition:.5s;
+}
+.btn-inp:nth-child(2):hover{
+background:rgb(0, 255, 0);
+transition:.25s;
+cursor:pointer;
+}
+.btn-inp:nth-child(1):hover{
+    background:rgb(0, 0, 255);
+    transition:.25s;
+    cursor:pointer;
+    }
