--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@
     border-bottom: 1rem outset rgb(148, 69, 69);
     transition: .5s;
     border-radius:12px;
-    height:50vh;
+    height:500px;
 }
 #email-title{
     font-family: "Jersey 10", sans-serif;
@@ -28,6 +28,10 @@
     display:flex;
     flex-direction:column;
     align-items:center;
+    padding:0 1rem;
+    bordeR:8px solid rgb(163, 163, 163);
+    border-top:none;
+    box-shadow:inset 0 0 7px .25px #333;
 }
 
 #wrapper:hover{
